--- a/graph_tutorial/oauth_settings.yml
+++ b/graph_tutorial/oauth_settings.yml
@@ -1,5 +1,5 @@
-app_id: YOUR_APP_ID_HERE
-app_secret: YOUR_APP_PASSWORD_HERE
+app_id: c6d6fb89-8724-4ac3-b45f-f2827a578e17
+app_secret: 5KtSMeCI@Y_H0xCI+xVp6kYvmR4W:@5g
 redirect: http://localhost:8000/tutorial/callback
 scopes: openid profile offline_access user.read calendars.read
 authority: https://login.microsoftonline.com/common
